--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -11,7 +11,7 @@
       <button type="button" (click)="removeGruppe('room')" class="btn btn-danger bg-danger btn-sm btn-block material-icons mb-3" [ngClass]="{'visually-hidden':!this.isRoomAvailable()}" title="Delete">delete</button>
     </div>
     <div class="btn-group">
-      <button type="button" (click)="toCreatRandomSeat()" [ngClass]="{'disabled':!this.isDataAndRoomExist()}"  class="w-100 btn btn-primary mb-3 btn-lg btn-block" >Sitzordnung erstellen</button>
+      <button type="button" (click)="removeGruppe('generator')" [ngClass]="{'disabled':!this.isDataAndRoomExist()}"  class="w-100 btn btn-primary mb-3 btn-lg btn-block" >Sitzordnung erstellen</button>
     </div>
   </div>
 </div>
@@ -29,7 +29,7 @@
         </button>
       </div>
       <div class="modal-body">
-        Möchten Sie Ihre aktuelle Daten löschen ?
+        {{textOFModal}}
       </div>
       <div class="modal-footer" style="justify-content: center;">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeInfoMessageModal()">Nein</button>
