SM-114 Einheitlicheres Styling von im Commit beinhaltenden Komponenten, Beheben von ein Paar Rechtschreibfehlern, besseres Verhalten der Navbar bei verschiedenen Displaygrößen

--- a/src/app/group-table/group-table.component.css
+++ b/src/app/group-table/group-table.component.css
@@ -1,6 +1,4 @@
 .nextButton{
-  float: right;
-  position: relative;
   right: 11%;
   font-size: 15px;
   background-color: #11b0e7;
@@ -11,8 +9,6 @@
 
 }
 .backButton{
-  float: left;
-  position: relative;
   left: 11%;
   font-size: 15px;
   background-color: #11b0e7;
@@ -31,4 +27,54 @@
   border:2px solid #ccc;
   width:300px; height: 100px;
   overflow-y: scroll;
+}
+
+.top-left {
+  top: 0;
+  left: 0;
+}
+
+.top-center {
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.top-right {
+  top: 0;
+  right: 0;
+}
+
+.mid-left {
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+
+.mid-center {
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.mid-right {
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+}
+
+.bottom-left {
+  bottom: 0;
+  left: 0;
+}
+
+.bottom-center {
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.bottom-right {
+  bottom: 0;
+  right: 0;
 }
