--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container pt-5">
-  <div class="h-100 p-2 bg-light border rounded-3 text-center">
-    <div class="container-fluid py-4">
+    <div class="container-fluid py-4 text-center">
       <div>
+        <a routerLink="/home">
         <svg style="height: 140px;" viewBox="0 0 446.85 274.22">
           <defs><style>.cls-1{fill:#00a19a;}.cls-2{fill:#1d1d1b;}</style></defs>
             <g>
@@ -38,9 +38,11 @@
             <path class="cls-2" d="M427.61,253.42c-.21-.05-.41-.09-.61-.12-.2-.03-.43-.05-.69-.05-1.3,0-2.31,.49-3.02,1.48-.71,.98-1.07,2.27-1.07,3.87v8.09h-3.73v-16.39h3.73v3.16h.06c.38-1.13,.94-1.99,1.69-2.57s1.63-.87,2.66-.87c.28,0,.54,.02,.78,.05,.24,.03,.47,.08,.69,.14l-.48,3.22Z"/>
       </g>
         </svg>
+        </a>
       </div>
-
     </div>
+  <div *ngIf="this.router.url != '/mainmen'" class="h-100 bg-light border rounded-3 shadow p-1 rounded">
+    <app-nav-bar></app-nav-bar>
   </div>
-  <router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 </div>
