--- a/src/app/group-table/group-table.component.html
+++ b/src/app/group-table/group-table.component.html
@@ -1,50 +1,56 @@
+<div class="container-fluid h-100 bg-light border rounded-3 shadow p-1 mt-4 rounded">
 <div class="container text-center mt-4">
-  <table class="table table-striped table-hover">
-    <thead  class="table-dark">
-    <tr>
-      <th>Nr</th>
-      <th>Vorname</th>
-      <th>Nachname</th>
-      <th >Löschen</th>
-    </tr>
-    </thead>
-    <tbody>
+  <div class="container">
+    <table class="table table-striped table-hover">
+      <thead  class="table-dark">
+      <tr>
+        <th>Nr</th>
+        <th>Vorname</th>
+        <th>Nachname</th>
+        <th >Löschen</th>
+      </tr>
+      </thead>
+      <tbody>
 
-    <tr *ngFor="let group of listOfContacts;  let i = index" >
+      <tr *ngFor="let group of listOfContacts;  let i = index" >
 
-      <td>
-        {{i+1}}
-      </td>
+        <td>
+          {{i+1}}
+        </td>
 
-      <td >
-        <input autocomplete="Firstname" (blur)="updateList(i, 'Vorname', $event)"  placeholder="Vorname eintragen" value="{{group.Vorname}}" style="  text-align:center; outline:none;width: 100%;height: 100%; border:none; background:none"  />
-      </td>
+        <td >
+          <input autocomplete="Firstname" (blur)="updateList(i, 'Vorname', $event)"  placeholder="Vorname eintragen" value="{{group.Vorname}}" style="  text-align:center; outline:none;width: 100%;height: 100%; border:none; background:none"  />
+        </td>
 
-      <td>
-        <input autocomplete="Lastname" (blur)="updateList(i, 'Nachname', $event)"  placeholder="Nachname eintragen" value="{{group.Nachname}}" style="text-align:center; outline:none;width: 100%;height: 100%; border: none; background:none"  />
-      </td>
+        <td>
+          <input autocomplete="Lastname" (blur)="updateList(i, 'Nachname', $event)"  placeholder="Nachname eintragen" value="{{group.Nachname}}" style="text-align:center; outline:none;width: 100%;height: 100%; border: none; background:none"  />
+        </td>
 
-      <td >
-        <svg (click)="delete(i)" style="cursor: pointer" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-          <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
-          <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+        <td >
+          <svg (click)="delete(i)" style="cursor: pointer" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+            <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+          </svg>
+        </td>
+      </tr>
+
+      <td  colspan="4" style="border-bottom: none">
+        <svg  style="cursor: pointer; float: right" (click)="addField()" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
+          <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+          <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"/>
         </svg>
       </td>
-    </tr>
-
-    <td  colspan="4" style="border-bottom: none">
-      <svg  style="cursor: pointer; float: right" (click)="addField()" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
-        <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-        <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"/>
-      </svg>
-    </td>
-    </tbody>
-  </table>
-  <div class="btn-group mr-2" style="float: right">
-    <button  type="button" class="btn btn-outline-dark "  (click)="confirmList()" >Weiter</button>
+      </tbody>
+    </table>
   </div>
-  <div class="btn-group mr-2"style="float: left">
-    <button  type="button" class="btn btn-outline-dark "  (click)="Cancle()">Abrechen</button>
+</div>
+  <div class="container position-relative h-100 p-lg-4">
+    <div class="position-absolute top-left ps-4">
+      <button  type="button" class="btn btn-outline-dark btn-light" (click)="Cancel()">Abrechen</button>
+    </div>
+    <div class="position-absolute top-right pe-4">
+      <button  type="button" class="btn btn-outline-dark btn-light" (click)="confirmList()">Weiter</button>
+    </div>
   </div>
 </div>
 
