--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -1,20 +1,31 @@
-<div class="container h-100 mt-3 bg-light border rounded-3 text-center">
-  <div class="d-grid gap-2 justify-content-center mt-3">
-    <div class="btn-group">
-      <button type="button" (click)="editOrCreatGroup()" class="w-75 btn mb-3 btn-lg btn-block" [ngClass]="{'btn-success':this.isDataExist(), 'btn-primary': !this.isDataExist()}">{{gruppeStatus}}</button>
-      <button type="button" (click)="ImportBox()"  class="material-icons md-48 btn btn-secondary mb-3 btn-lg btn-block" [ngClass]="{'disabled':this.isDataExist()}" title="Import">file_open</button>
-      <button type="button" (click)="removeGruppe('grupp')" class="btn btn-danger bg-danger btn-sm btn-block material-icons mb-3" [ngClass]="{'visually-hidden':!this.isDataExist()}" title="Delete">delete</button>
+<div class="container">
+  <div class="row">
+    <div class="col">
     </div>
-    <div class="btn-group">
-      <button type="button" id="roomBtn"  routerLink="/room" class="w-100 btn btn-primary mb-3 btn-lg btn-block" >{{raumStatus}}</button>
-      <button type="button" class="material-icons md-48 btn btn-secondary mb-3 btn-lg btn-block" [ngClass]="{'disabled':this.isRoomAvailable()}"  title="Import">file_open</button>
-      <button type="button" (click)="removeGruppe('room')" class="btn btn-danger bg-danger btn-sm btn-block material-icons mb-3" [ngClass]="{'visually-hidden':!this.isRoomAvailable()}" title="Delete">delete</button>
+    <div class="col-8 mt-5">
+      <div class="container h-100 bg-light border rounded-3 shadow p-3 rounded">
+        <div class="d-grid gap-2 justify-content-center mt-3">
+          <div class="btn-group">
+            <button type="button" (click)="editOrCreatGroup()" class="w-100 rounded-pill rounded-end btn mb-3 btn-lg btn-block" [ngClass]="{'btn-success':this.isDataExist(), 'btn-primary': !this.isDataExist()}">{{gruppeStatus}}</button>
+            <button type="button" (click)="ImportBox()"  class="material-icons border-2 md-48 btn btn-secondary mb-3 btn-lg btn-block" [ngClass]="{'disabled':this.isDataExist(), 'rounded-pill rounded-start':!this.isDataExist()}" title="Import">file_open</button>
+            <button *ngIf="this.isDataExist()" type="button" (click)="deleteData('group')" class="btn btn-danger rounded-pill rounded-start btn-sm btn-block material-icons mb-3" [ngClass]="{'visually-hidden':!this.isDataExist()}" title="Delete">delete</button>
+          </div>
+          <div class="btn-group">
+            <button type="button" id="roomBtn"  routerLink="/room" class="w-100 rounded-pill rounded-end btn btn-primary mb-3 btn-lg btn-block" >{{raumStatus}}</button>
+            <button type="button" class="material-icons md-48 btn btn-secondary mb-3 btn-lg btn-block" [ngClass]="{'disabled':this.isRoomAvailable(), 'rounded-pill rounded-start':!this.isRoomAvailable()}"  title="Import">file_open</button>
+            <button *ngIf="this.isRoomAvailable()" type="button" (click)="deleteData('room')" class="btn btn-danger rounded-pill rounded-start btn-sm btn-block material-icons mb-3" [ngClass]="{'visually-hidden':!this.isRoomAvailable()}" title="Delete">delete</button>
+          </div>
+          <div class="btn-group">
+            <button type="button" (click)="toCreatRandomSeat()" [ngClass]="{'disabled':!this.isDataAndRoomExist()}"  class="w-100 rounded-pill btn btn-primary mb-3 btn-lg p-3 btn-block" >Sitzordnung erstellen</button>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="btn-group">
-      <button type="button" (click)="removeGruppe('generator')" [ngClass]="{'disabled':!this.isDataAndRoomExist()}"  class="w-100 btn btn-primary mb-3 btn-lg btn-block" >Sitzordnung erstellen</button>
+    <div class="col">
     </div>
   </div>
 </div>
+
 <app-import-csv></app-import-csv>
 
 
