--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -16,7 +16,7 @@
             <button *ngIf="this.isRoomAvailable()" type="button" (click)="deleteData('room')" class="btn btn-danger rounded-pill rounded-start btn-sm btn-block material-icons mb-3" [ngClass]="{'visually-hidden':!this.isRoomAvailable()}" title="Delete">delete</button>
           </div>
           <div class="btn-group">
-            <button type="button" (click)="toCreatRandomSeat()" [ngClass]="{'disabled':!this.isDataAndRoomExist()}"  class="w-100 rounded-pill btn btn-primary mb-3 btn-lg p-3 btn-block" >Sitzordnung erstellen</button>
+            <button type="button" (click)="deleteData('generator')" [ngClass]="{'disabled':!this.isDataAndRoomExist()}"  class="w-100 rounded-pill btn btn-primary mb-3 btn-lg p-3 btn-block" >Sitzordnung erstellen</button>
           </div>
         </div>
       </div>
