SM-114 Icons für Menü + Navbar

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -6,13 +6,14 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" (click)="this.mainMenu.editOrCreatGroup()"><h5>Gruppe</h5></a>
+          <a class="nav-link" (click)="this.mainMenu.editOrCreatGroup()"><h5><mat-icon fontSet="material-icons-outlined">groups</mat-icon> Gruppe</h5></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/room"><h5>Raum</h5></a>
+
+          <a class="nav-link" routerLink="/room"><h5><mat-icon fontSet="material-icons-outlined">layers</mat-icon> Raum</h5></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" routerLink="" aria-disabled="true"><h5>Sitzordnung</h5></a>
+          <a class="nav-link disabled" routerLink="" aria-disabled="true"><h5><mat-icon fontSet="material-icons-outlined">event_seat</mat-icon> Sitzordnung</h5></a>
         </li>
       </ul>
     </div>
