--- a/src/app/import-csv/import-csv.component.html
+++ b/src/app/import-csv/import-csv.component.html
@@ -1,6 +1,6 @@
 <div class="modal fade" id="ModalBoxImport" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content"><div class="modal-header">
+    <div class="modal-content"><small id="FileTypHelp1" class="form-text text-secondary" style="margin-left: 10px">gruppe importieren</small><div class="modal-header">
       <h5 class="modal-title" id="exampleModalLongTitle">Passende verschlüsselte Datei auswählen und ein gültiges Passwort eingeben!</h5>
       <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="closeModal()">
         <span aria-hidden="true">&times;</span>
