--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -216,9 +216,9 @@
 
     <div class="left-container-child" >
 
-      <div><label class="label-left-dark label-left-title">Raumfläche</label></div>
+      <div class="hideStep4"><label class="label-left-dark label-left-title">Raumfläche</label></div>
 
-      <div class="horizontal-left-side-element" style="  align-items: center;">
+      <div class="horizontal-left-side-element roomdimension" style="  align-items: center;">
 
           <div><label class="label-left-dark">Länge(m)</label></div>
           <input type="number" min="{{minHeight}}" max="{{maxHeight}}" [(ngModel)]="standardRooms[currentRoomId].height" (change)="updateVisualisation(standardRooms[currentRoomId].height,standardRooms[currentRoomId].height)">
@@ -234,13 +234,13 @@
 
       <div class="objToolbox">
 
-        <div style="height: 30px;">
+        <div class="hideStep3" style="height: 30px;">
           <label class="label-left-dark label-left-title">Schreibtische</label>
         </div>
         <div style="height: 30px;">
           <label class="label-left-dark label-left-title">{{elementsNumber[0].number}}</label>
         </div>
-        <div>
+        <div class="hideStep5">
           <svg class="icons" viewBox="0 0 54.19 41.94">
             <g>
               <path d="M53.43,.03c-.54-.13-1.08,.19-1.21,.73l-4.66,18.75c-.07,.27-.31,.46-.59,.46H27.53c-.33,0-.6,.27-.6,.6v20.72c0,.36,.29,.65,.65,.65h.71c.36,0,.65-.29,.65-.65V22.57c0-.33,.27-.6,.6-.6h17.1c.33,0,.6,.27,.6,.6v18.72c0,.36,.29,.65,.65,.65h.71c.36,0,.65-.29,.65-.65V21.16s0-.1,.02-.15L54.16,1.24c.13-.54-.19-1.08-.73-1.21Z"/>
@@ -254,11 +254,11 @@
       <div  *ngFor="let elem of allElements">
 
         <div class="horizontal-left-side-element"  *ngIf="elem.roomId === currentRoomId && elem.element === 'desk'" >
-          <div class="horizontal-width">
+          <div class="horizontal-width hideStep3">
             <div><label class="label-left-dark">Typ</label></div>
             <label  style="color: #999; font-family: 'Segoe UI';">{{elem.elementtyp}}</label>
           </div>
-          <div class="horizontal-width">
+          <div class="horizontal-width hideStep3">
             <div><label class="label-left-dark">Plätze</label></div>
             <label  style="color: #999; font-family: 'Segoe UI';">{{elem.place}}</label>
           </div>
@@ -274,7 +274,7 @@
             <div><label class="label-left-dark">Rotation</label></div>
             <input type="number" value="{{elem.degRotation}}" id="elr{{elem.id}}" (change)="updateElementsObject(elem.id)" [(ngModel)]="elem.degRotation"  style="color: #999; font-family: 'Segoe UI';">
           </div>
-          <div class="horizontal-width" style="line-height: 80px">
+          <div class="horizontal-width" style="line-height: 80px;">
             <label (click)="isToDelete = true; currentId = elem.id;"><span class="material-icons">delete_sweep</span></label>
           </div>
         </div>
@@ -291,13 +291,13 @@
 
       <div class="objToolbox">
 
-        <div style="height: 30px;">
+        <div class="hideStep3" style="height: 30px;">
           <label class="label-left-dark label-left-title">Türe</label>
         </div>
         <div style="height: 30px;">
           <label class="label-left-dark label-left-title">{{elementsNumber[1].number}}</label>
         </div>
-        <div>
+        <div class="hideStep5">
           <svg class="icons" viewBox="0 0 42.9 45.39">
             <g>
             <path d="M17.76,22.55h-5.91c-.55,0-1,.45-1,1s.45,1,1,1h5.91c.55,0,1-.45,1-1s-.45-1-1-1Z"/>
@@ -311,15 +311,15 @@
       <div  *ngFor="let elem of allElements">
 
         <div class="horizontal-left-side-element"  *ngIf="elem.roomId === currentRoomId && elem.element === 'door'">
-          <div class="horizontal-width">
+          <div class="horizontal-width hideStep3">
             <div><label class="label-left-dark">Platzierung</label></div>
             <label id="elr{{elem.id}}"  style="color: #999; font-family: 'Segoe UI';">{{elem.platzierung}}</label>
           </div>
-          <div *ngIf="elem.platzierung == 'vorne' || elem.platzierung == 'hinten'" class="horizontal-width">
+          <div *ngIf="elem.platzierung == 'vorne' || elem.platzierung == 'hinten'" class="horizontal-width hideStep3">
             <div><label class="label-left-dark">X</label></div>
             <input type="number" value="{{elem.x}}" id="elx{{elem.id}}" (change)="updateElementsObject(elem.id)" [(ngModel)]="elem.x"   style="color: #999; font-family: 'Segoe UI';">
           </div>
-          <div *ngIf="elem.platzierung == 'links' || elem.platzierung == 'rechts'" class="horizontal-width">
+          <div *ngIf="elem.platzierung == 'links' || elem.platzierung == 'rechts'" class="horizontal-width hideStep3">
             <div><label class="label-left-dark">Y</label></div>
             <input type="number" value="{{elem.y}}" id="ely{{elem.id}}" (change)="updateElementsObject(elem.id)" [(ngModel)]="elem.y"   style="color: #999; font-family: 'Segoe UI';">
           </div>
@@ -341,13 +341,13 @@
 
       <div class="objToolbox">
 
-        <div style="height: 30px;">
+        <div class="hideStep3" style="height: 30px;">
           <label class="label-left-dark label-left-title">Fenster</label>
         </div>
         <div style="height: 30px;">
           <label class="label-left-dark label-left-title">{{elementsNumber[2].number}}</label>
         </div>
-        <div>
+        <div  class="hideStep5">
           <svg class="icons" viewBox="0 0 49.46 44.42">
             <g>
               <path d="M48.99,.15c-.3-.18-.67-.2-.98-.04l-8.13,4.14H9.58L1.45,.11C1.15-.05,.77-.03,.48,.15s-.48,.5-.48,.85V43.42c0,.35,.18,.67,.48,.85,.16,.1,.34,.15,.52,.15,.16,0,.31-.04,.45-.11l8.13-4.14h30.3l8.13,4.14c.14,.07,.3,.11,.45,.11,.18,0,.36-.05,.52-.15,.3-.18,.48-.5,.48-.85V1c0-.35-.18-.67-.48-.85Zm-1.52,18.99h-6.34V5.86l6.34-3.23V19.13ZM8.34,5.86v13.27H2V2.63l6.34,3.23ZM2,22.21v-1.07h6.34v17.42l-6.34,3.23V22.21Zm37.12,15.96H10.34V6.25h28.77v31.91Zm8.34,3.62l-6.34-3.23V21.13h6.34v20.65Z"/>
@@ -360,15 +360,15 @@
       <div *ngFor="let elem of allElements">
 
         <div class="horizontal-left-side-element"  *ngIf="elem.roomId === currentRoomId && elem.element === 'window'">
-          <div class="horizontal-width">
+          <div class="horizontal-width hideStep3">
             <div><label class="label-left-dark">Platzierung</label></div>
             <label id="elr{{elem.id}}" style="color: #999; font-family: 'Segoe UI';">{{elem.platzierung}}</label>
           </div>
-          <div *ngIf="elem.platzierung == 'vorne' || elem.platzierung == 'hinten'" class="horizontal-width">
+          <div *ngIf="elem.platzierung == 'vorne' || elem.platzierung == 'hinten'" class="horizontal-width hideStep3">
             <div><label class="label-left-dark">X</label></div>
             <input type="number" value="{{elem.x}}" id="elx{{elem.id}}" (change)="updateElementsObject(elem.id)" [(ngModel)]="elem.x"   style="color: #999; font-family: 'Segoe UI';">
           </div>
-          <div *ngIf="elem.platzierung == 'links' || elem.platzierung == 'rechts'" class="horizontal-width">
+          <div *ngIf="elem.platzierung == 'links' || elem.platzierung == 'rechts'" class="horizontal-width hideStep3">
             <div><label class="label-left-dark">Y</label></div>
             <input type="number" value="{{elem.y}}" id="ely{{elem.id}}" (change)="updateElementsObject(elem.id)" [(ngModel)]="elem.y"   style="color: #999; font-family: 'Segoe UI';">
           </div>
@@ -390,13 +390,13 @@
 
       <div class="objToolbox">
 
-        <div style="height: 30px;">
+        <div class="hideStep3" style="height: 30px;">
           <label class="label-left-dark label-left-title">Tafeln</label>
         </div>
         <div style="height: 30px;">
           <label class="label-left-dark label-left-title">{{elementsNumber[3].number}}</label>
         </div>
-        <div>
+        <div  class="hideStep5">
           <svg class="icons" viewBox="0 0 70.65 60.28">
             <g>
               <path d="M69.15,36.61h-5.92V4.32c0-1.09-.89-1.98-1.98-1.98h-24.01l-1.03-1.83c-.39-.69-1.38-.69-1.77,0l-1.03,1.83H9.4c-1.09,0-1.98,.89-1.98,1.98V36.61H1.5c-.83,0-1.5,.67-1.5,1.5s.67,1.5,1.5,1.5H17.89l-6.72,18.66c-.28,.78,.12,1.64,.9,1.92,.17,.06,.34,.09,.51,.09,.61,0,1.19-.38,1.41-.99l7.09-19.68h28.48l7.09,19.68c.22,.61,.8,.99,1.41,.99,.17,0,.34-.03,.51-.09,.78-.28,1.18-1.14,.9-1.92l-6.73-18.66h16.39c.83,0,1.5-.67,1.5-1.5s-.67-1.5-1.5-1.5ZM10.43,5.34H60.22v31.26H10.43V5.34Z"/>
@@ -409,15 +409,15 @@
       <div  *ngFor="let elem of allElements">
 
         <div class="horizontal-left-side-element"  *ngIf="elem.roomId === currentRoomId && elem.element === 'board'">
-          <div class="horizontal-width">
+          <div class="horizontal-width hideStep3">
             <div><label class="label-left-dark">Platzierung</label></div>
             <label id="elr{{elem.id}}" style="color: #999; font-family: 'Segoe UI';">{{elem.platzierung}}</label>
           </div>
-          <div *ngIf="elem.platzierung == 'vorne' || elem.platzierung == 'hinten'" class="horizontal-width">
+          <div *ngIf="elem.platzierung == 'vorne' || elem.platzierung == 'hinten'" class="horizontal-width hideStep3">
             <div><label class="label-left-dark">X</label></div>
             <input type="number" value="{{elem.x}}" id="elx{{elem.id}}" (change)="updateElementsObject(elem.id)" [(ngModel)]="elem.x"   style="color: #999; font-family: 'Segoe UI';">
           </div>
-          <div *ngIf="elem.platzierung == 'links' || elem.platzierung == 'rechts'" class="horizontal-width">
+          <div *ngIf="elem.platzierung == 'links' || elem.platzierung == 'rechts'" class="horizontal-width hideStep3">
             <div><label class="label-left-dark">Y</label></div>
             <input type="number" value="{{elem.y}}" id="ely{{elem.id}}" (change)="updateElementsObject(elem.id)" [(ngModel)]="elem.y"   style="color: #999; font-family: 'Segoe UI';">
           </div>
