--- a/src/app/person-properties/person-properties.component.html
+++ b/src/app/person-properties/person-properties.component.html
@@ -46,7 +46,7 @@
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="besideBoard" >
+              <input (change)="regulateProperties('besideBoard')"  class="form-check-input" type="checkbox" value="" id="besideBoard" >
               <label class="form-check-label" for="besideBoard">
                 Tafelnähe
               </label>
