Zeichnung des Raums mit generierten Platzzuweisungen

--- a/src/app/sitting-places-generator/sitting-places-generator.html
+++ b/src/app/sitting-places-generator/sitting-places-generator.html
@@ -1,2 +1,21 @@
-<p>sitzordnung works!</p>
-<button (click)="CalculateRoomArea()">test</button>
+<div id="container">
+
+
+  <div id="container-visualiser">
+
+
+    <div id="generator-table">
+    </div>
+
+    <div id="roomvisualiser">
+    </div>
+
+
+  </div>
+
+
+</div>
+
+
+
+<div id="footer"></div>
